<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:text="@string/longitude"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/longitudeVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="8"
                android:gravity="center|end"
                android:text="@string/longitudeValue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/latitude"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/latitudeVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:layout_marginTop="10dp"
                android:gravity="center|end"
                android:text="@string/latitudeValue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/altitude"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/altitudeVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:layout_marginTop="10dp"
                android:gravity="center|end"
                android:text="@string/altitudeValue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/accuracy"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/accuracyVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:layout_marginTop="10dp"
                android:gravity="center|end"
                android:text="@string/accuracyValue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed"
                android:layout_marginTop="10dp"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/speedVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center|end"
                android:layout_marginTop="10dp"
                android:text="@string/speedValue"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:layout_marginTop="10dp"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/addressVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center|end"
                android:layout_marginTop="10dp"
                android:text="@string/addressVal"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/locationsupdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:checked="true"
            android:text="@string/locationUpdates"
            android:textColor="@color/lightPurple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/updates"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/updatesVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/updatesVal"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />
        </TableRow>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/GPSAndPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/GPSPowerSaver"
            android:textColor="@color/lightPurple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sensor"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sensorVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/sensorVal"
                android:textColor="@color/lightPurple"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/wayPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wayPoints"
                android:textColor="@color/lightPurple"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wayPointsBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/wayPointsBox"
                android:textColor="@color/lightPurple"
                android:textSize="16sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/locationsbtn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/locations"
                android:textColor="@color/lightPurple"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/noOfLocation"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/NoOfLocations"
                android:textColor="@color/lightPurple"
                android:textSize="18sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/map"
                android:textColor="@color/lightPurple"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>


</RelativeLayout>